@@ -1,5 +1,17 @@
 2005-10-31  Bastien Nocera  <hadess@hadess.net>
 
+	* NEWS: upd
+	* src/totem-playlist.c: (treeview_row_changed),
+	(totem_playlist_class_init):
+	* src/totem-playlist.h:
+	* src/totem.c: (totem_action_seek), (totem_action_seek_relative),
+	(item_activated_cb), (totem_callback_connect),
+	(playlist_widget_setup):
+	Play the file from the beginning when the playlist item is
+	double-clicked (Closes: #320272)
+
+2005-10-31  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plparse/totem-pl-parser.c: Added application/x-trash as an
 	ignored mime-type, so that backup files are not added to the playlist
 	(Closes: #320056)
